Adição do rodapé e ajustes diversos.

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@
     height: 450px;
 }
 
+.caixa_section1 {
+    /*border: 1px solid #262fae;*/
+    height: 550px;
+}
+
+.caixa_section2 {
+    /*border: 1px solid #262fae;*/
+    height: 300px;
+}
+
 .caixa_ubs {
     /*border: 1px solid #262fae;*/
     border-radius: 25px;
@@ -40,3 +50,59 @@
     /*background: rgb(143, 115, 115);*/
     height: 225px;
 }
+
+/*Barra navegação*/
+.navbar-dark .navbar-nav .nav-link {
+    color: #6d9186;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: white;
+}
+
+.navbar-dark .navbar-brand {
+    color: #6d9186;
+}
+
+.navbar-dark .navbar-brand:hover {
+    color: white;
+}
+
+/*Rodapé*/
+footer {
+    background: #1d1c22;
+    padding: 30px 0px 20px 0px;
+}
+
+footer h5 {
+    color: #6d9186;
+}
+
+footer li {
+    color: #6d9186;
+}
+
+footer i {
+    color: #6d9186;
+}
+
+
+footer h5 {
+    font-size: 1.1em;
+}
+
+footer ul {
+    list-style: none;
+}
+
+footer ul li.social {
+    float: right;
+    margin: 0 5px;
+    font-size: 1.1em;
+}
+
+footer ul li i:hover {
+    color: white;
+}
+
+/* #1d1c22 #44a190*/
